@@ -3,6 +3,7 @@ requires 'perl', '5.022';
 requires 'List::Util', '1.33';
 requires 'List::MoreUtils', '0.07';
 requires 'Keyword::Declare', '0.001015';
+requires 'Keyword::Simple';
 requires 'Moops';
 requires 'PPR';
 
